# OpenDMUMAT

./: .gitignore  CMakeLists.txt  LICENSE  readme.org  test_opendm.cpp  umat_opendm.cpp
.github/: CODEOWNERS
Manuals/: OpenDM_2Mode_Theory.org  OpenDM_2Mode_Theory.tex  OpenDM_TheoryManual.org  OpenDM_TheoryManual.tex  UMAT_UserManual.org  bpmResearchPaper.sty  references_opendm.bib
Manuals/figs/: OpenDM2_DamageModes.pdf_tex  OpenDM4_DamageModes.pdf_tex
OpenDMLib/: CMakeLists.txt  initrunopendm.cpp  math_opendm.hpp  model_opendm.cpp  model_opendm.hpp  model_opendm2param.cpp  model_opendm2param.hpp  model_opendm4param.cpp  model_opendm4param.hpp
abqTests/: Coupon_8Ply_OpenDM.inp  Coupon_8Ply_OpenDM4.inp  Coupon_8Ply_OpenDM4_Comp.inp  Coupon_8Ply_OpenDM4_LoadUnload.inp  Coupon_8Ply_OpenDM4_pm45.inp  Coupon_8Ply_OpenDM_Comp.inp  Coupon_8Ply_OpenDM_LoadUnload.inp  Coupon_8Ply_OpenDM_pm45.inp  StressStrain_8Ply_OpenDM.csv  StressStrain_8Ply_OpenDM4.csv  StressStrain_8Ply_OpenDM4_Comp.csv  StressStrain_8Ply_OpenDM4_LoadUnload.csv  StressStrain_8Ply_OpenDM4_pm45.csv  StressStrain_8Ply_OpenDM_pm45.csv  abaqus_v6_LINUX.env  abaqus_v6_WINDOWS.env
termTests/gold/: umat_OpenDM2_Mat0_Run0.csv  umat_OpenDM2_Mat0_Run1.csv  umat_OpenDM2_Mat0_Run2.csv  umat_OpenDM2_Mat0_Run3.csv  umat_OpenDM2_Mat0_Run5.csv  umat_OpenDM2_Mat1_Run0.csv  umat_OpenDM2_Mat1_Run1.csv  umat_OpenDM2_Mat1_Run2.csv  umat_OpenDM2_Mat1_Run3.csv  umat_OpenDM2_Mat1_Run4.csv  umat_OpenDM2_Mat1_Run5.csv  umat_OpenDM4_Mat0_Run0.csv  umat_OpenDM4_Mat0_Run1.csv  umat_OpenDM4_Mat0_Run2.csv  umat_OpenDM4_Mat0_Run3.csv  umat_OpenDM4_Mat0_Run4.csv  umat_OpenDM4_Mat0_Run5.csv  umat_OpenDM4_Mat1_Run0.csv  umat_OpenDM4_Mat1_Run1.csv  umat_OpenDM4_Mat1_Run2.csv  umat_OpenDM4_Mat1_Run3.csv  umat_OpenDM4_Mat1_Run5.csv
